--- a/gridindex.css
+++ b/gridindex.css
@@ -38,7 +38,7 @@ header {
   border: none;
   background: none;
   width:100%;
-  text-align: left;
+  text-align: center;
   cursor: pointer;
   outline: none;
 }
