--- a/gridindex.css
+++ b/gridindex.css
@@ -39,7 +39,7 @@ header {
   display: block;
   border: none;
   width:100%;
-  text-align: left;
+  text-align: center;
   cursor: pointer;
 }
 /*n AXTRAS*/
