--- a/gridindex.css
+++ b/gridindex.css
@@ -30,8 +30,9 @@ header {
 }
 
 .sidenav a, .dropdownbtn {
-  padding: 8px 8px 8px 16px;
+  padding: 8px 8px 8px 10px;
   margin-bottom: 7px;
+  margin-left: 10px;
   text-decoration: none;
   font-size: 20px;
   color: #bb2245;
