added classes to each box so they can skew accordingly

--- a/gridindex.css
+++ b/gridindex.css
@@ -45,6 +45,14 @@ header {
 }
 /*n AXTRAS*/
 
+.skew1{
+  transform:rotate(2deg);
+}
+
+.skew2{
+  transform: rotate(-2deg);
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
