--- a/gridindex.css
+++ b/gridindex.css
@@ -31,7 +31,7 @@ header {
 
 .sidenav a, .dropdownbtn {
   padding: 8px 8px 8px 10px;
-  margin-bottom: 7px;
+  margin-bottom: 15px;
   margin-left: 10px;
   text-decoration: none;
   font-size: 20px;
@@ -42,15 +42,24 @@ header {
   width:100%;
   text-align: center;
   cursor: pointer;
+  -webkit-transition: 1s ease-in-out;
+  transition: 1s ease-in-out;
 }
 /*n AXTRAS*/
 
 .skew1{
-  transform:rotate(2deg);
+  transform:rotate(1.5deg);
 }
 
+.skew1:hover{
+  transform: rotate(-.5deg);
+}
+
+.skew2:hover{
+  transform: rotate(.5deg);
+}
 .skew2{
-  transform: rotate(-2deg);
+  transform: rotate(-1.5deg);
 }
 
 .dropdown {
