--- a/gridindex.css
+++ b/gridindex.css
@@ -137,11 +137,9 @@ h1 {
   font-family: 'Manjari', sans-serif;
   grid-column: 1/4;
   grid-row: 3;
-  margin: 1em 0.5em 1em 0em;
-  padding: 10px 26px;
   height: 10px;
   display: flex;
-  text-align: left;
+  text-align: center;
   flex-wrap: wrap;
 }
 
