--- a/gridindex.css
+++ b/gridindex.css
@@ -137,12 +137,13 @@ h1 {
   font-family: 'Manjari', sans-serif;
   grid-column: 1/4;
   grid-row: 3;
-  margin: 1em 0.5em 1em 0em;
-  padding: 10px 26px;
-  height: 10px;
-  display: flex;
-  text-align: left;
-  flex-wrap: wrap;
+  background-color: #ffdd19;
+  display: inline-block;
+  padding: 10px 3px 5px 3px;
+}
+
+.h1{
+  text-align: center;
 }
 
 h2 {margin: auto}
