--- a/gridindex.css
+++ b/gridindex.css
@@ -125,7 +125,7 @@ footer{
 }
 
 h1 {
-  font-family: 'Manjari', sans-serif;
+  font-family: 'Shadows Into Light', sans-serif;
   grid-column: 1/4;
   grid-row: 3;
   background-color: #ffdd19;
@@ -140,7 +140,7 @@ h1 {
 
 h2 {margin: auto}
 .items {
-  font-family: 'Manjari', sans-serif;
+  font-family: 'Shadows Into Light', sans-serif;
   grid-column: 1/4;
   grid-row: 3;
   margin: 2em;
