--- a/gridindex.css
+++ b/gridindex.css
@@ -117,7 +117,7 @@ footer{
   width: 100%;
   margin: 0;
   border: 0px;
-  background-color: black;
+  background-color: #0fab87;
   padding: 0em;
   display: flex;
   justify-content: space-around;
