--- a/gridindex.css
+++ b/gridindex.css
@@ -139,6 +139,19 @@ h1 {
   text-align: center;
 }
 
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
+
+.commdesc {
+  text-align: center;
+}
+
+.examplepics{
+  text-align: center;
+}
+
 h2 {margin: auto}
 .items {
   font-family: 'Gloria Hallelujah', cursive;
