--- a/gridindex.css
+++ b/gridindex.css
@@ -27,9 +27,10 @@ header {
 .sidenav {
   grid-row: 2;
   grid-column: 1/2;
-  padding: 10px 10px;
-  border: 0px;
-  background: #bb2245;
+  padding: 0px 0px;
+  height: 0px;
+  border-bottom: 620px solid #bb2245;
+  border-right: 100px solid transparent;
   color: black;
 }
 
