--- a/gridindex.css
+++ b/gridindex.css
@@ -35,9 +35,10 @@ header {
 }
 
 .sidenav a, .dropdownbtn {
-  padding: 8px 8px 8px 10px;
+  padding: 8px 29px 8px 29px;
+  margin-top: 10px;
   margin-bottom: 15px;
-  margin-left: 10px;
+  margin-left: 20px;
   text-decoration: none;
   font-size: 20px;
   color: #bb2245;
