--- a/gridindex.css
+++ b/gridindex.css
@@ -107,6 +107,12 @@ header {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
+@media only screen and (max-width: 500px) {
+  /* For mobile phones: */
+  [class*="sidenav"] {
+    width: 100%;
+  }
+
 /*main*/
 main {
   grid-row: 2;
