--- a/gridindex.css
+++ b/gridindex.css
@@ -108,11 +108,21 @@ header {
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
 @media only screen and (max-width: 500px) {
-  /* For mobile phones: */
-  [class*="sidenav"] {
+  .sidenav {
     width: 100%;
+    height: auto;
+    position: relative;
   }
+  .sidenav a {float: left;}
+  div.content {margin-left: 0;}
+}
 
+@media screen and (max-width: 400px) {
+  .sidenav a {
+    text-align: center;
+    float: none;
+  }
+}
 /*main*/
 main {
   grid-row: 2;
