--- a/gridindex.css
+++ b/gridindex.css
@@ -106,16 +106,14 @@ header {
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {background-color: #3e8e41;}
 
-@media only screen and (max-width: 500px) {
-  .sidenav {
-    border-bottom: 0;
-    border-right: 0;
-  }
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
   [class*="sidenav"] {
     width: 100%;
-  }
-  .header{
-    width: 100%;
+    border-bottom: 0;
+    border-right: 0;
+    padding: 8px 50px 8px 50px;
+    text-align:center;
   }
 }
 /*main*/
